src/main/java/com/example/springdatajpademo/error/BookingNotFoundException.java
package com.example.springdatajpademo.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(value = HttpStatus.NOT_FOUND)
public class BookingNotFoundException extends RuntimeException {

    public BookingNotFoundException(Long id) {
        super("Booking not found with id " + id);
    }
}
